--- a/Project1/Project1/Base.lproj/Main.storyboard
+++ b/Project1/Project1/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
         <!--Detail View Controller-->
         <scene sceneID="X1G-ES-3jn">
             <objects>
-                <viewController id="c2j-BP-Z0a" customClass="DetailViewController" customModule="Project1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" id="c2j-BP-Z0a" customClass="DetailViewController" customModule="Project1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="K1s-OR-Aiu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
